--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ img{
 .nav li a{
     text-decoration: none;
     color: white;
-    padding: 20px;
+    padding: 10px 20px;
     border-bottom: 3px solid transparent;
 }
 
