--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ img{
 .header h1 a{
     text-decoration: none;
     color: white;
-    font-size: 180%;
+    font-size: 24px;
     font-weight: 600;
     padding: 20px;
 }
@@ -90,15 +90,16 @@ img{
 .nav li{
     float: left;
     display: block;
-    padding-top: 10px;
+    padding-top: 2%;
 }
 
 
 .nav li a{
     text-decoration: none;
     color: white;
-    padding: 10px 20px;
+    padding: 15% 20px;
     border-bottom: 3px solid transparent;
+    font-size: 16px;
 }
 
 .nav li a:hover{
@@ -115,12 +116,13 @@ img{
 }
 
 .tagline h2{
-    font-size: 250%;
+    font-size: 36px;
     text-align: center;
     margin-bottom: 4%;
 }
 
 .tagline p{
+    font-size: 16px;
     text-align: center;
     line-height: 150%;
 }
@@ -139,7 +141,7 @@ img{
 
 
 .about_secret_title h2{
-    font-size: 120%;
+    font-size: 20px;
     display: inline-block;
     line-height: 180%;
     position: relative;
@@ -186,16 +188,44 @@ img{
 }
 
 .three_secret h3{
-    font-size: 110%;
+    font-size: 18px;
 }
 
 .three_secret p{
     margin-top: 5%;
     text-align: left;
     line-height: 150%;
+    font-size: 16px;
 }
 
+/* chef_info */
 
+.chef_info{
+    background: #3d1101;
+    color: white;
+    font-size: 16px;
+}
+
+.chef_info h2{
+    font-size: 20px;
+}
+
+.chef_info h3{
+    margin-bottom: 3%;
+}
+
+.chef_img{
+    float: left;
+    padding-left: 4%;
+    width: 45%;
+}
+
+.chef_main_content{
+    float: left;
+    width: 40%;
+    line-height: 150%;
+    margin: 10% 0 0 3%;
+}
 
 .clearfix::after{
     clear: both;
