--- a/css/style.css
+++ b/css/style.css
@@ -232,20 +232,45 @@ img{
 .customer_impression{
     background: #efe9e7;
     color: #3d1101;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
+.customer_impression h2{
+    font-size: 24px;
+    text-align: center;
+}
+
+.customers{
+    display: flex;
+    justify-content: center;
+    line-height: 150%;
+    padding-left: 2%;
+    padding-top: 4%;
+}
 
 .customers li{
-    width: 25%;
-    float: left;
-    /* text-align: left; */
+    width: 22%;
+    margin-left: 1%;
+    margin-right: 2%;
+}
+
+.customers h3{
+    font-size: 18px;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .customers img{
+    height: 100%;
     border-radius: 50%;
-    float: left;
 }
 
+.customers span{
+    display: block;
+    text-align: right;
+    padding-top: 10%;
+}
 
 .clearfix::after{
     clear: both;
