--- a/css/style.css
+++ b/css/style.css
@@ -63,20 +63,31 @@ img{
 
 .header{
     background: rgba(0, 0, 0, 0.5);
-    padding: 1.5% 3%;
+    padding-top: 1.5%;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 .header h1{
-    display: block;
     float: left;
 }
 
 .header h1 a{
-    text-decoration: none;
-    color: white;
-    font-size: 24px;
-    font-weight: 600;
-    padding: 20px;
+    background-image: url(../img/header/logo_w\(null\).svg);
+    display: block;
+    background-size: 120px 24px;
+    width: 120px;
+    height: 24px;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    text-indent: 105%;
+    white-space: nowrap;
+    padding: 5% 5%;
+    /* text-decoration: none; */
+    /* color: white; */
+    /* font-size: 24px; */
+    /* font-weight: 600; */
+    /* padding: 20px; */
 }
 
 .header h1 a:hover{
@@ -97,7 +108,7 @@ img{
 .nav li a{
     text-decoration: none;
     color: white;
-    padding: 15% 20px;
+    padding: 10px 20px;
     border-bottom: 3px solid transparent;
     font-size: 16px;
 }
@@ -228,7 +239,7 @@ img{
     float: left;
     width: 40%;
     line-height: 150%;
-    margin: 10% 0 0 3%;
+    margin: 8% 0 0 3%;
 }
 
 /* .customer_impression */
@@ -408,6 +419,60 @@ img{
     margin-left: 10px;
 }
 
+/* ................footer................... */
+
+.footer{
+    background: #efe9e7;
+    color: #3d1101;
+    line-height: 150%;
+    padding: 5% 0;
+    display: inline-flex;
+    justify-content: space-around;
+}
+
+.footer h3{
+    font-size: 24px;
+    margin-bottom: 6%;
+}
+
+.about_hex{
+    width: 30%;
+    margin-left: 2%;
+}
+
+
+
+.contact_us{
+    width: 30%;
+}
+
+.contact_us ul li{
+    list-style-type: disc;
+    list-style-position: inside;
+}
+
+.footer_link{
+    max-width: 30%;
+    margin-right: 2%;
+}
+
+/* h2連結放圖片 */
+.footer_link h2 a{
+    background-image: url(../img/footer/logo_l\(null\).svg);
+    background-repeat: no-repeat;
+    display: inline-block;
+    background-size: 245px 49px;
+    width: 245px;
+    height: 49px;
+    overflow: hidden;
+    text-indent: 101%;
+    white-space: nowrap;
+    padding: 5% 0;
+}
+
+.social_media{
+    margin-left: 50%;
+}
 
 .social_media a{
     text-decoration: none;
@@ -415,7 +480,15 @@ img{
 }
 
 .google{
-    color: red;
+    color: #db4437;
+}
+
+.twitter{
+    color: #41abe1;
+}
+
+.fb{
+    color: #3a5795;
 }
 
 .clearfix::after{
