--- a/css/style.css
+++ b/css/style.css
@@ -83,11 +83,6 @@ img{
     text-indent: 105%;
     white-space: nowrap;
     padding: 5% 5%;
-    /* text-decoration: none; */
-    /* color: white; */
-    /* font-size: 24px; */
-    /* font-weight: 600; */
-    /* padding: 20px; */
 }
 
 .header h1 a:hover{
@@ -110,7 +105,6 @@ img{
     color: white;
     padding: 10px 20px;
     border-bottom: 3px solid transparent;
-    font-size: 16px;
 }
 
 .nav li a:hover{
@@ -133,9 +127,8 @@ img{
 }
 
 .tagline p{
-    font-size: 16px;
     text-align: center;
-    line-height: 150%;
+    line-height: 25px;
 }
 
 .tagline span{
@@ -158,7 +151,7 @@ img{
 .about_secret_title h2{
     font-size: 20px;
     display: inline-block;
-    line-height: 180%;
+    line-height: 45px;
     position: relative;
 }
 
@@ -209,7 +202,7 @@ img{
 .three_secret p{
     margin-top: 5%;
     text-align: left;
-    line-height: 150%;
+    line-height: 25px;
     font-size: 16px;
 }
 
@@ -238,7 +231,7 @@ img{
 .chef_main_content{
     float: left;
     width: 40%;
-    line-height: 150%;
+    line-height: 25px;
     margin: 8% 0 0 3%;
 }
 
@@ -259,7 +252,7 @@ img{
 .customers{
     display: flex;
     justify-content: center;
-    line-height: 150%;
+    line-height: 25px;
     padding-left: 2%;
     padding-top: 4%;
 }
@@ -298,7 +291,7 @@ img{
 .booking h2{
     text-align: center;
     font-size: 24px;
-    line-height: 140%;
+    line-height: 40px;
     margin-bottom: 3%;
 }
 
@@ -312,7 +305,7 @@ img{
     width: 45%;
     float: right;
     padding-right: 4%;
-    line-height: 150%;
+    line-height: 25px;
 }
 
 .booking_form h3{
@@ -409,6 +402,11 @@ img{
     padding: 10px 25px;
 }
 
+.cancel_button:hover{
+    background-color: #a09e9e31;
+    color: black;
+}
+
 .confirm_button{
     border: none;
     border-radius: 5px;
@@ -419,12 +417,17 @@ img{
     margin-left: 10px;
 }
 
+.confirm_button:hover{
+    background-color: #f88c51;
+    color: red;
+}
+
 /* ................footer................... */
 
 .footer{
     background: #efe9e7;
     color: #3d1101;
-    line-height: 150%;
+    line-height: 25px;
     padding: 5% 0;
     display: inline-flex;
     justify-content: space-around;
