--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,14 @@ img{
     color: white;
 }
 
+@media(max-width: 500px){
+    .banner{
+        background-image: url(../img/header/header_mobile.png);
+        max-width: 600px;
+        height: 420px;
+    }
+}
+
 .header{
     background: rgba(0, 0, 0, 0.5);
     padding-top: 1.5%;
@@ -73,13 +81,20 @@ img{
     padding-bottom: 1.5%;
 }
 
+@media(max-width: 500px){
+    .header{
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
 .header h1{
     float: left;
 }
 
 .header h1 a{
-    background-image: url(../img/header/logo_w\(null\).svg);
-    display: block;
+    background-image: url(../img/header/logo_w@svg.svg);
+    display: inline-block;
     background-size: 120px 24px;
     width: 120px;
     height: 24px;
@@ -92,6 +107,12 @@ img{
 
 .header h1 a:hover{
     color: #f84242;
+}
+
+@media(max-width: 500px){
+    .header h1 a{
+        margin-top: 15px;
+    }
 }
 
 .nav{
@@ -117,6 +138,63 @@ img{
     border-bottom: 3px solid #f84242;
 }
 
+/* 在PC上隱藏漢堡選單 */
+.showmenu{
+    display: none;
+  }
+
+@media (max-width: 500px){
+    /* .header h1 a{
+        margin-top: 10px;
+    } */
+    .nav {
+        /*隱藏選單開始*/
+        max-height: 0px;
+        overflow: hidden;
+        /*隱藏選單結束*/
+        transition: max-height 1.5s;
+        margin-top: 1px;
+        /*絕對定位疊在網頁上*/
+        position: absolute;
+        z-index: 100;
+        /*header 80px+1px boder 線條*/
+        top: 53px;
+        left: 0;
+        right: 0;
+        background: #0F222B;
+    }
+    .nav li{
+        text-align: center;
+        float: none;
+        padding: 20px;
+    }
+    .nav li a{
+        transition: all 0.2s;
+    }
+    .nav li a:hover{
+        background: #69CA62;
+        color: #fff;
+        border-bottom: none;
+
+    }
+    .showmenu{
+        display: block;
+        float: right;
+        /* margin: 1em; */
+    }
+
+    .showmenu i{
+        font-size: 24px;
+        padding: 15px 15px;
+        color: white;
+    }
+
+    /*jQ點擊後動態在 body 加上 class */
+    .menu-show .nav{
+        max-height: 500px;
+    }
+}
+
 .tagline{
     background: rgba(0, 0, 0, 0.3);
     width: 50%;
@@ -129,11 +207,31 @@ img{
     font-size: 36px;
     text-align: center;
     margin-bottom: 4%;
+    white-space: nowrap;
+}
+
+/* br換行q取消 */
+.tagline h2 br{
+    content: "";
 }
 
 @media(max-width: 768px){
     .tagline{
-        width: 60%;    
+        width: 80%;  
+    }
+}
+
+@media(max-width: 500px){
+    .tagline{
+        width: 90%;
+        margin-top: 60px;
+    }
+    .tagline h2{
+        line-height: 1.2em;
+        font-size: 10.5vw;
+    }
+    .tagline h2 br{
+        content: none;
     }
 }
 
@@ -144,6 +242,13 @@ img{
 
 .tagline span{
     margin: 0 0.5%;
+}
+
+@media(max-width: 500px){
+    .tagline p{
+        line-height: 0;
+        padding-bottom: 3%;
+    }
 }
 
 /* .....................content.................. */
@@ -180,6 +285,15 @@ img{
     position: absolute;
 }
 
+@media(max-width: 500px){
+    .about_secret .about_secret_title h2::before, .about_secret .about_secret_title h2::after{
+        background-color: #efe9e7;
+    }
+    .about_secret_title{
+        margin-top: 30px;
+    }
+}
+
 /* 調整左右兩邊線的位置 */
 .about_secret .about_secret_title h2::before{
     left: -80%;
@@ -201,20 +315,34 @@ img{
     margin-bottom: 5%;
 }
 
-.three_secret img{
+.three_secret li img{
     border-radius: 50%;
     margin-bottom: 5%;
 }
 
-.three_secret h3{
+.three_secret li h3{
     font-size: 18px;
 }
 
-.three_secret p{
+.three_secret li p{
     margin-top: 5%;
     text-align: left;
     line-height: 25px;
     font-size: 16px;
+}
+
+@media(max-width: 500px){
+    .three_secret li{
+        width: 100%;
+        float: none;
+        padding-left: 0;
+    }
+    .three_secret li h3{
+        margin-bottom: 20px;
+    }
+    .three_secret li p{
+        margin: 0 50px;
+    }
 }
 
 /* chef_info */
@@ -233,8 +361,14 @@ img{
     margin-left: 5%;
 }
 
-
-
+@media(max-width: 500px){
+    .chef_img{
+        width: 100%;
+        float: none;
+        margin: 0;
+        background-position: center center;
+    }
+}
 .chef_intro{
     color: white;
     float: left;
@@ -245,18 +379,33 @@ img{
 
 .chef_intro h2{
     font-size: 20px;
-    margin-bottom: 16px;
+    margin-bottom: 5px;
 }
 
-.chef_intro h2 br{
+.chef_intro h3{
     font-size: 16px;
+    margin-bottom: 15px;
+
 }
 
 .chef_intro p{
     font-size: 16px;
 }
 
+@media(max-width: 768px){
+    .chef_intro{
+        padding: 60px 2% 40px 3%;
+    }
+}
 
+@media(max-width: 500px){
+    .chef_intro{
+        width: 100%;
+        float: none;
+        padding: 40px 40px;
+        line-height: 25px;
+    }
+}
 
 /* .customer_impression */
 
@@ -303,6 +452,30 @@ img{
     padding-top: 10%;
 }
 
+@media(max-width: 500px){
+    .customer_impression h2{
+        margin: 20px 0;
+    }
+    .customers{
+        display: block;
+    }
+    .customers img{
+        float: left;
+    }
+    .customers li{
+        width: 80%;
+        float: left;
+        padding-left: 20px;
+    }
+    
+}
+
+@media(max-width: 380px){
+    .customers li{
+        width: 70%;
+    }
+}
+
 /* booking */
 .booking{
     background: #f6f4f3;
@@ -320,16 +493,25 @@ img{
 
 .map{
     background-image: url(../img/booking/Map.png);
-    /* max-width: 45%; */
     width: 40%;
     height: 388px;
     float: left;
     margin-left: 5%;
+    background-repeat: no-repeat;
 }
 
 @media(max-width: 768px){
     .map{
         margin-left: 2%;
+    }
+}
+
+@media(max-width: 500px){
+    .map{
+        float: none;
+        width: 95%;
+        margin: 0 auto;
+        margin-bottom: 30px;
     }
 }
 
@@ -348,8 +530,15 @@ img{
     }
 }
 
-.booking_form h3{
-    margin-bottom: 2%;
+@media(max-width: 500px){
+    .booking_form{
+        width: 90%;
+        float: none;
+    }
+}
+
+.veg{
+    margin-top: 10px;
 }
 
 #guess_name,#tel,#mail,#people{
@@ -357,9 +546,19 @@ img{
     margin-bottom: 2%;
 }
 
-@media(max-width: 769px) {
+
+@media(max-width: 768px) {
     #guess_name,#tel,#mail,#people{
         width: 100%;
+    }
+}
+
+@media(max-width: 500px){
+    #guess_name,#tel,#mail,#people{
+        width: 100%;
+        height: 4em;
+        display: block;
+        line-height: 1.5em;
     }
 }
 
@@ -388,8 +587,8 @@ img{
   /* 新增自定 radio button */
   .checkmark {
     position: absolute;
-    top: -1;
-    left: 5;
+    top: 3px;
+    left: 15px;
     height: 16px;
     width: 16px;
     background-color: #f6f4f3;
@@ -429,6 +628,7 @@ img{
     border-radius: 50%;
     background: #4a90e2;
   }
+
 
 /* 按鈕位置 */
 .button{
@@ -472,9 +672,13 @@ img{
     background: #efe9e7;
     color: #3d1101;
     line-height: 25px;
-    padding: 5% 5%;
-    /* display: inline-flex; */
-    /* justify-content: space-around; */
+    padding: 5% 0;
+}
+
+@media(max-width: 768px){
+    .footer{
+        padding: 5% 3%;
+    }
 }
 
 .footer h3{
@@ -485,10 +689,8 @@ img{
 .about_hex{
     float: left;
     width: 26%;
-    /* margin-left: 5%; */
+    margin-left: 3%;
 }
-
-
 
 .contact_us{
     float: left;
@@ -503,23 +705,20 @@ img{
 
 .footer_link{
     width: 26%;
-    float: right;
-    /* padding-right: 10%; */
+    float: left;
+    margin-left: 15%;
 }
 
-@media(max-width: 769px){
+@media(max-width: 768px){
     .about_hex{
         width: 25%;
+        margin-left: 0;
     }
     .contact_us{
-        width: 25%;
+        width: 20%;
     }
     .footer_link{
         width: 35%;
-    }
-
-    .social_media{
-        padding-right: 2%;
     }
 }
 
@@ -539,11 +738,11 @@ img{
 }
 
 
+
 .social_media{
     float: right;
     margin-top: 10%;
-    /* float: right; */
-    /* margin-left: 40%; */
+    padding-right: 10%;
 }
 
 
@@ -563,6 +762,31 @@ img{
 
 .fb{
     color: #3a5795;
+}
+
+@media(max-width: 500px){
+    .about_hex,.contact_us{
+        width: 100%;
+        margin-bottom: 6%;
+        float: none;
+    }
+    .footer h3{
+        margin-bottom: 3%;
+    }
+    .about_hex{
+        margin-left: 10px;
+    }
+    .footer_link{
+        width: 65%;
+        margin-left: 35%;
+    }
+}
+
+@media(max-width: 375px){
+    .footer_link{
+        width: 80%;
+        margin-left:20%;
+    }
 }
 
 .clearfix::after{
