--- a/css/style.css
+++ b/css/style.css
@@ -795,7 +795,7 @@ img{
 .cart{
     background-color: #efe9e7;
     color: #3d1101;
-    padding: 50px 3%;
+    padding: 50px 3% 0 3%;
 }
 
 .order_manu{
@@ -899,6 +899,7 @@ img{
     display: block;
     padding-right: 20px;
     border-right: 2px solid #3d1101;
+    margin-top: 5px;
 }
 
 .checkout a:hover{
@@ -907,14 +908,29 @@ img{
 
 .shopcar i{
     color: #3d1101;
-    text-decoration: none;
     margin-left: 20px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .shopcar i:hover{
     color: red;
 }
+
+.shopcar{
+    text-decoration: none;
+}
+
+/* 購物車數量提示 */
+.add_number {
+    border-radius: 9px;
+    font-size: 12px;
+    background: #ff0000;
+    color: #fff;
+    padding: 0 5px;
+    vertical-align: top;
+    margin-left: -10px;
+}
+
 
 /* ----product_list------ */
 .product_list{
