--- a/css/style.css
+++ b/css/style.css
@@ -803,6 +803,12 @@ img{
     width: 25%;
 }
 
+@media(max-width: 500px){
+    .order_manu{
+        width: 100%;
+    }
+}
+
 .order_manu_title{
     margin-left: 5%;
     float: left;
@@ -831,6 +837,12 @@ img{
     width: 90%;
 }
 
+@media(max-width: 500px){
+    .order_manu_list{
+        width: 100%;
+    }
+}
+
 .order_manu_list a{
     color: #3d1101;
     text-decoration: none;
@@ -852,28 +864,53 @@ img{
 
 /* ------searchbar-------- */
 
+@media(max-width: 500px){
+    .search_checkout{
+        margin-top: 50px;
+    }
+}
+
 .searchbar{
     float: left;
 }
 
 @media(max-width: 768px){
-    .searchbar input{
-        width: 300px;
+    .searchbar {
+        width: 60%;
     }
 }
 
-.searchbar input[type=text]{
+@media(max-width: 500px){
+    .searchbar{
+        width: 140%;
+        float: none;
+    }
+}
+
+.searchbar input{
     float: left;
-    padding: 7px;
+    padding: 7px 0;
     border: 2px solid #3d1101;
     border-right: none;
     font-size: 16px;
+    width: 450px;
+}
+
+@media(max-width: 768px){
+    .searchbar input{
+        width: 85%;
+    }
+}
+
+@media(max-width: 375px){
+    .searchbar input{
+        width: 75%;
+    }
 }
 
 .searchbar button{
-    float: right;
+    float: left;
     padding: 6px 10px;
-    margin-right: 16px;
     background: #3d1101;
     color: white;
     font-size: 17px;
@@ -892,6 +929,29 @@ img{
     margin-top: 8px;
     margin-bottom: 30px;
     margin-right: 20px;
+}
+
+@media(max-width: 768px){
+    .checkout_zone{
+        width: 30%;
+    }
+}
+
+@media(max-width: 500px){
+    .checkout_zone{
+        float: none;
+        width: 50%;
+        margin-left: 90%;
+        margin-top: 20px;
+    }
+}
+
+@media(max-width: 375px){
+    .checkout_zone{
+        margin-left: 65%;
+        width: 75%;
+        margin-right: 0;
+    }
 }
 
 .checkout_zone li{
@@ -925,6 +985,7 @@ img{
     text-decoration: none;
 }
 
+
 /* 購物車數量提示 */
 .add_number {
     border-radius: 9px;
@@ -942,6 +1003,12 @@ img{
     float: left;
 }
 
+@media(max-width: 500px){
+    .product_list{
+        float: none;
+    }
+}
+
 .product_list li{
     width: 30.5%;
     float: left;
@@ -954,6 +1021,15 @@ img{
 @media(max-width: 768px){
     .product_list li{
         width: 45%;
+    }
+}
+
+@media(max-width: 500px){
+    .product_list li{
+        width: 100%;
+        float: none;
+        margin-right: 0;
+        margin-left: 17%;
     }
 }
 
@@ -1012,6 +1088,7 @@ img{
     background-size: 100% 100%;
 }
 
+
 .burger_package_banner i{
     color: white;
     font-size: 20px;
@@ -1053,6 +1130,12 @@ img{
 @media(max-width: 768px){
     .burger_package_content p::after{
         left: 47px;
+    }
+}
+
+@media(max-width: 500px){
+    .burger_package_content p::after{
+        left: 35%;
     }
 }
 
@@ -1105,6 +1188,12 @@ img{
 @media(max-width: 768px){
     .sausage_content p::after{
         left: 38px;
+    }
+}
+
+@media(max-width: 500px){
+    .sausage_content p::after{
+        left: 34%;
     }
 }
 
@@ -1161,6 +1250,12 @@ img{
     }
 }
 
+@media(max-width: 500px){
+    .burg_brothers_content p::after{
+        left: 34%;
+    }
+}
+
 .dragon_ball_package_banner{
     background-image: url(../img/product_list/product_4.png);
     max-width: 100%;
@@ -1210,6 +1305,12 @@ img{
 @media(max-width: 768px){
     .dragon_ball_package_content p::after{
         left: 38px;
+    }
+}
+
+@media(max-width: 500px){
+    .dragon_ball_package_content p::after{
+        left: 34%;
     }
 }
 
