--- a/css/style.css
+++ b/css/style.css
@@ -1340,6 +1340,129 @@ img{
     margin-right: 3px;
 }
 
+/* ----------登入頁面------------- */
+
+.login{
+    background-color: #efe9e7;
+    padding: 40px 0 10px 0;
+}
+
+.login_title{
+    display: table;
+    margin: 0 auto;
+    line-height: 40px;
+    margin-bottom: 20px;
+}
+
+.login_title h2{
+    background-image: url(../img/login/logo_l@svg.svg);
+    background-repeat: no-repeat;
+    width: 245px;
+    height: 49px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-indent: 101%;
+}
+
+.login_title span{
+    font-size: 20px;
+    color: #3d1101;
+    margin-left: 21%; 
+}
+
+.login_form {
+    display: table;
+    margin: 0 auto;
+    padding: 15px 15px;
+}
+
+.login_form h2{
+    color: #3d1101;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.login_form{
+    color: #3d1101;
+    box-shadow: 3px 3px 3px grey;
+    border-radius: 2px;
+    border-top: 3px solid #ff5e45;
+}
+
+/* 輸入欄跟icon效果 */
+.login_form form input{
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    height: 32px;
+    margin: 8px 0;
+    padding-left: 35px;
+    transition: 0.3s;
+}
+
+.input_icon{
+    position: relative;
+}
+
+.input_icon i{
+    position: absolute;
+    left: 0;
+    top: 8px;
+    padding: 9px 8px;
+    color: #ccc;
+    transition: 0.3s;
+}
+
+.input_icon input:focus + i{
+    color: dodgerblue;
+}
+
+.login_form form a{
+    text-decoration: none;
+    color: #ff5e45;
+    font-size: 14px;
+}
+
+.login_form form a:hover{
+    color: red;
+}
+
+.login_and_reg_btn{
+    padding-top: 35px;
+}
+
+.login_and_reg_btn input{
+    display: block;
+    width: 125px;
+    height: 32px;
+}
+
+.reg_btn{
+    background-color: #9B9896;
+    border-radius: 3px;
+    color: white;
+    float: left;
+    cursor: pointer;
+}
+
+.reg_btn:hover{
+    background-color: green;
+}
+
+.login_btn{
+    background-color: #f56c23;
+    color: white;
+    border-radius: 3px;
+    float: right;
+    cursor: pointer;
+}
+
+.login_btn:hover{
+    background-color: darkcyan
+}
+
 .clearfix::after{
     clear: both;
     content: '';
