--- a/css/style.css
+++ b/css/style.css
@@ -1342,19 +1342,19 @@ img{
 
 /* ----------登入頁面------------- */
 
-.login{
+.login_and_reg{
     background-color: #efe9e7;
     padding: 40px 0 10px 0;
 }
 
-.login_title{
+.login_and_reg_title{
     display: table;
     margin: 0 auto;
     line-height: 40px;
     margin-bottom: 20px;
 }
 
-.login_title h2{
+.login_and_reg_title h2{
     background-image: url(../img/login/logo_l@svg.svg);
     background-repeat: no-repeat;
     width: 245px;
@@ -1364,7 +1364,7 @@ img{
     text-indent: 101%;
 }
 
-.login_title span{
+.login_and_reg_title span{
     font-size: 20px;
     color: #3d1101;
     margin-left: 21%; 
@@ -1392,7 +1392,7 @@ img{
 }
 
 /* 輸入欄跟icon效果 */
-.login_form form input{
+.login_form .login_input input{
     width: 100%;
     border: 1px solid #ccc;
     border-radius: 3px;
@@ -1461,6 +1461,101 @@ img{
 
 .login_btn:hover{
     background-color: darkcyan
+}
+
+/* register頁面 */
+.reg_form {
+    width: 70%;
+    margin: 0 auto;
+    padding: 15px 15px;
+}
+
+@media(max-width: 500px){
+    .reg_form{
+        width: 99%;
+    }
+}
+
+.reg_form h2{
+    color: #3d1101;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.reg_conditions{
+    width: 52%;
+    float: left;
+    letter-spacing: 0.5px;
+    line-height: 20px;
+}
+
+@media(max-width: 450px){
+    .reg_conditions{
+        float: none;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+}
+
+.reg_form{
+    color: #3d1101;
+    box-shadow: 3px 3px 3px grey;
+    border-radius: 2px;
+    border-top: 3px solid #ff5e45;
+}
+
+.reg_form form{
+    width: 45%;
+    float: left;
+    margin-left: 2%;
+}
+
+@media(max-width: 450px){
+    .reg_form form{
+        float: none;
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+/* 輸入欄跟icon效果 */
+.reg_form .reg_input input{
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    height: 32px;
+    margin: 8px 0;
+    padding-left: 35px;
+    transition: 0.3s;
+}
+
+.reg_form form a{
+    text-decoration: none;
+    color: #ff5e45;
+    font-size: 14px;
+}
+
+.reg_form form a:hover{
+    color: green;
+}
+
+
+.register_btn{
+    float: right;
+    width: 125px;
+    height: 32px;
+    border-radius: 3px;
+    display: block;
+    background-color: #ff5e45;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 40px;
+}
+
+.register_btn:hover{
+    background-color: blue;
 }
 
 .clearfix::after{
